third_party/move/move-compiler-v2/tests/checking/unused/private_call_3.exp

Diagnostics:
warning: function `inaccessible` is unused. Remove it, or suppress warning with `#[test_only]` (if test-only), `#[verify_only]` (if verify-only), or `#[lint::skip(unused)]`.
  ┌─ tests/checking/unused/private_call_3.move:8:16
  │
8 │     inline fun inaccessible(): u64 {
  │                ^^^^^^^^^^^^

warning: function `inaccessible` is unused. Remove it, or suppress warning with `#[test_only]` (if test-only), `#[verify_only]` (if verify-only), or `#[lint::skip(unused)]`.
   ┌─ tests/checking/unused/private_call_3.move:24:16
   │
24 │     inline fun inaccessible(): u64 {
   │                ^^^^^^^^^^^^

error: function `0x42::o::inaccessible` is private to module `0x42::o`
   ┌─ tests/checking/unused/private_call_3.move:46:16
   │
46 │     inline fun inaccessible(): u64 {
   │                ^^^^^^^^^^^^ called from function `0x42::n::test`
   ·
93 │     assert!(o::inaccessible() == 42, 1);
   │             ----------------- called here

error: function `0x42::o_nonfriend::inaccessible` is private to module `0x42::o_nonfriend`
   ┌─ tests/checking/unused/private_call_3.move:72:16
   │
72 │     inline fun inaccessible(): u64 {
   │                ^^^^^^^^^^^^ called from function `0x42::n::test2`
   ·
99 │     assert!(o_nonfriend::inaccessible() == 42, 1);
   │             --------------------------- called here
